<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.student.moviebooking.MainActivity">

    <Button
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/button1_main"
        android:id="@+id/button1_main"
        android:layout_marginTop="73dp"
        android:background="@drawable/text_view_border"
        android:layout_marginStart="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp" />

    <Button
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/button2_main"
        android:id="@+id/button2_main"
        android:background="@drawable/text_view_border"
        android:layout_alignTop="@+id/button1_main"
        android:layout_alignStart="@+id/button4_main"
        android:textSize="18dp" />

    <Button
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/button3_main"
        android:id="@+id/button3_main"
        android:background="@drawable/text_view_border"
        android:layout_alignTop="@+id/button4_main"
        android:layout_alignStart="@+id/button1_main"
        android:textSize="18dp" />

    <Button
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/button4_main"
        android:id="@+id/button4_main"
        android:background="@drawable/text_view_border"
        android:layout_marginEnd="36dp"
        android:layout_below="@+id/button2_main"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="81dp"
        android:textSize="18dp" />
</RelativeLayout>
